# datapane

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
landing/: index.html
public-docs/: .gitignore  README.md  Taskfile.yml  mkdocs.yml  nbbuild.sh  pyproject.toml
public-docs/docs/: examples.md  index.md  installing-datainpane.md  installing-datapane.md  quickstart.ipynb
public-docs/docs/blocks/: display-blocks.ipynb  layout-blocks.ipynb  overview.ipynb
public-docs/docs/reference/: reports.md
public-docs/docs/reference/display-blocks/: data.ipynb  embeds.ipynb  plots.ipynb  text.ipynb
public-docs/docs/reference/layout-blocks/: group.ipynb  page.ipynb  select.ipynb  toggle.ipynb
public-docs/docs/reports/: jupyter-integration.ipynb  overview.ipynb  styling.ipynb
public-docs/docs/static/: extra.css
python-client/: README.md  mypy.ini  pyproject.toml
python-client/src/datainpane/: __init__.py  builtins.py  optional_libs.py  templates.py
python-client/src/datainpane/_vendor/: simple_template.py
python-client/src/datainpane/blocks/: __init__.py  asset.py  base.py  convenience.py  diff.py  layout.py  misc_blocks.py  text.py  wrappers.py
python-client/src/datainpane/client/: config.py  exceptions.py  utils.py
python-client/src/datainpane/common/: __init__.py  datafiles.py  df_processor.py  dp_types.py  ops_utils.py  utils.py  versioning.py  viewxml_utils.py
python-client/src/datainpane/ipython/: environment.py  exceptions.py  magic.py  templates.py  utils.py
python-client/src/datainpane/processors/: __init__.py  api.py  cdn_cache.py  file_store.py  processors.py  types.py
python-client/src/datainpane/resources/html_templates/: head_chrome.html  local_template.html
python-client/src/datainpane/resources/view_resources/: full_schema.rnc  full_schema.rng
python-client/src/datainpane/view/: asset_writers.py  view_blocks.py  visitors.py  xml_visitor.py
python-client/tests/: __init__.py  conftest.py  test_cdn.py  test_sprint_features.py
python-client/tests/client/views/: test_builtins.py  test_misc.py  test_views.py
python-client/tests/common/: test_df_processor.py  test_df_processor_2.py  test_df_processor_3.py  test_misc.py
python-client/tests/cypress_test_app/: dp_test_cypress.py  dp_test_cypress_noparams.py
python-client/tests/testfiles/runscripts/: dp_app.py  dp_complex_report.py  dp_test_mod.py  sample_module.py
web-components/: .eslintrc.json  .gitignore  Taskfile.yml  base.tailwind.config.js  cypress.config.ts  global.ts  js-only.d.ts  local-report.tailwind.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web-components/base/: index.ts  vite.config.ts
web-components/base/src/: polyfills.ts
web-components/base/src/styles/: base.scss  tailwind.css  templates-base.scss
web-components/cypress/e2e/legacy/: report-builder.spec.js
web-components/cypress/e2e/org/: file.cy.js  report-styling.cy.js
web-components/cypress/e2e/public/: datatable-extensions.cy.js  report-render.cy.js  report-social.cy.js  report-styling.cy.js
web-components/cypress/support/: commands.js  constants.js
web-components/report/: index.ts  vite.config.ts
web-components/report/src/: environment.ts  theme.ts
web-components/report/src/components/: ReportComponent.vue  ReportContainer.vue
web-components/report/src/data-model/: layout-store.ts  test-maps.ts
web-components/report/src/shared/: DPButton.vue  DPDropdown.vue  shared.ts
web-components/report/tests/: setup.ts
web-components/shared/: DPClipboard.ts  dip-track.ts  stream-shim.js
web-components/shared/legacy/: react-base.scss
web-components/template-components/: index.ts  vite.config.ts
web-components/template-components/src/: Modal.ce.vue  template-utils.ts
(+17 files in other folders)
