[tool.poetry]
name = "datainpane-docs-beta"
version = "0.1.0"
description = "Data In Pane Docs"
authors = ["Data In Pane <info@datainpane.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
datainpane = { path = "../python-client", develop = true, extras= ["plotting"] }

# mkdocs
mkdocs-redirects = "^1.2.0"
mkdocstrings = {version = "^0.23.0", extras = ["python"]}
mkdocs-material = "^9.2.0"
mknotebooks = "^0.8.0"

# DS helpers
jupyterlab = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
