[project]
name = "datainpane"
version = "0.17.0"
description = "Build interactive HTML reports from Python. Fork of the original Datapane project."
authors = [{name = "Data In Pane Team", email = "dev@datainpane.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data", "analysis", "jupyter", "pandas", "altair", "report", "datapane"]
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.4.0",
    "pyarrow>=9.0.0",
    "altair>=5.0.0,<6.0.0",
    "chardet>=5.0.0,<6.0.0",
    "colorlog>=6.4.0,<7.0.0",
    "dominate>=2.7.0,<3.0.0",
    "lxml>=4.7.1,<5.0.0",
    "micawber>=0.5.3",
    "packaging>=21.0.0",
    "ipynbname>=2021.3.2",
    "multimethod>=1.9.0,<2.0.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.5.0,<4.0.0",
    "bokeh>=3.0.0,<4.0.0",
    "plotly>=5.6.0,<6.0.0",
    "folium>=0.13.0",
]
cloud = []

[project.urls]
Homepage = "https://www.datainpane.com"
Repository = "https://github.com/pallavbakshi/datapane"
Documentation = "https://docs.datainpane.com"
"Original Project" = "https://github.com/datapane/datapane"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-datadir>=1.3.1",
    "pytest-timeout>=2.0.1",
    "glom>=22.1.0",
    "jupyterlab>=4.0.0",
    "openpyxl>=3.0.0",
    "pdoc3>=0.10.0",
    "mypy>=0.961.0",
    "types-chardet>=5.0.1",
    "types-PyYAML>=6.0.9",
    "types-click-spinner>=0.1.12",
    "types-requests>=2.28.0",
    "types-tabulate>=0.8.9,<0.10.0",
    "pytest-dotenv>=0.5.2",
    "vega-datasets>=0.9.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datainpane"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
